--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
 	font-size: 17px;
 	line-height: 20px;
-	overflow-x: scroll;
     height: 100%;
     margin: 0;
 }
@@ -28,7 +27,7 @@ a {
 }
 
 img {
-    
+    display: block;
 }
 
 .bg {
